# FTShare-python-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_EN.md  SDK接口测试报告.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md
src/ftshare/: __init__.py  base.py  client.py  config.py  dataframe.py  endpoints.py  exceptions.py  fields.py  pagination.py  response.py
src/ftshare/apis/: __init__.py  bond.py  corporate.py  economic.py  etf.py  finance.py  forex.py  fund.py  futures.py  global_index.py  goodwill.py  hk.py  holder.py  index.py  llm_corpus.py  market.py  pledge.py  spot.py  stock.py  unpublished.py  us.py
src/ftshare/endpoints/: __init__.py  bond.py  economic.py  etf.py  forex.py  fund.py  futures.py  hk.py  index.py  llm_corpus.py  spot.py  stock.py  types.py  unpublished.py  us.py
tests/: conftest.py  endpoint_cases.py  test_client.py  test_endpoint_contracts.py  test_integration_market.py
